chanign app properties